--- a/Workspace/WebContent/css/page/debugger/page20060310.css
+++ b/Workspace/WebContent/css/page/debugger/page20060310.css
@@ -1,5 +1,5 @@
 /*@import url ("../../style/page.css");*/
-@import url ("/WorkSpace/css/style/page.css");
+@import url ("/css/style/page.css");
 table.treeview {
 	width:220px;
 }
