--- a/Workspace/WebContent/css/component/treeview/TreeView_Classic02.css
+++ b/Workspace/WebContent/css/component/treeview/TreeView_Classic02.css
@@ -1,5 +1,4 @@
 table.treeview {
-/*    background-color:white;*/
     width:100%;
     height:100%;
     border-collapse:collapse;
@@ -10,9 +9,6 @@ table.treeview {
 }
 /*                   ScrollBar                     */
 div.treeviewScrollBar {
-    overflow-x:auto;
-    overflow-y:auto;
-/*    background-color: white;*/
     border: 0px solid #555577;/*#84B2C6;*/
     height:100%;
 }
@@ -34,21 +30,20 @@ th.treeviewHeader {
 td.treeviewFooter {
     display:none;
     padding:0px 0px 0px 0px;
-    FONT-WEIGHT: bold;
-    WHITE-SPACE: nowrap;
-    TEXT-ALIGN: center;
+    font-weight: bold;
+    white-space: nowrap;
+    text-align: center;
     border: 0px solid black;
     background-color: white;
 }
 /*                    Top-Left                     */
 td.treeviewTopLeft {
     display:none;
-    WIDTH: 0px;
-    HEIGHT: 0px;
-    FONT-SIZE: 1px;
+    width: 0px;
+    height: 0px;
+    font-size: 1px;
     background-repeat: no-repeat;
     background-position: left top;
-/*  background-color:DarkGray;*/
     border: 0px solid black;
     padding:0px 0px 0px 0px;
 }
@@ -58,7 +53,6 @@ td.treeviewTop {
     HEIGHT: 0px;
     background-repeat: repeat-x;
     background-position: top;
-/*  background-color:DarkGray;*/
     border: 0px solid black;
     padding:0px 0px 0px 0px;
 }
@@ -69,7 +63,6 @@ td.treeviewTopRight {
     HEIGHT: 0px;
     background-repeat: no-repeat;
     background-position: left top;
-/*  background-color:DarkGray;*/
     border: 0px solid black;
     padding:0px 0px 0px 0px;
 }
@@ -79,13 +72,14 @@ td.treeviewLeft {
     WIDTH: 0px;
     background-repeat: repeat-y;
     background-position: left top;
-/*  background-color:DarkGray;*/
     border: 0px solid black;
     padding:0px 0px 0px 0px;
 }
 /*                      Main                       */
 td.treeviewMain {
-    BACKGROUND-COLOR: white;
+    overflow-x:auto;
+    overflow-y:auto;
+	background-color: white;
     border: 0px solid black;
     font-family: Verdana, Arial, Helvetica, sans-serif;
     font-size:10px;
@@ -132,7 +126,6 @@ td.treeviewRight {
     WIDTH: 0px;
     background-repeat: repeat-y;
     background-position: left top;
-/*  background-color:DarkGray;*/
     border: 0px solid black;
     padding:0px 0px 0px 0px;
 }
@@ -143,7 +136,6 @@ td.treeviewBottomLeft {
     HEIGHT: 0px;
     background-repeat: no-repeat;
     background-position: left top;
-/*  background-color:DarkGray;*/
     border: 0px solid black;
     padding:0px 0px 0px 0px;
 }
@@ -166,7 +158,6 @@ td.treeviewBottomRight {
     FONT-SIZE: 1px;
     background-repeat: no-repeat;
     background-position: left top;
-/*  background-color:DarkGray;*/
     border: 0px solid black;
     padding:0px 0px 0px 0px;
 }
