Upd Editor Java Add AutoDeploy Capability Part 3

--- a/Workspace/WebContent/css/Leonie.css
+++ b/Workspace/WebContent/css/Leonie.css
@@ -1,4 +1,4 @@
-body {
+body {test:1
 	scrollbar-face-color: #CCCCCC
 	scrollbar-highlight-color: buttonface;
 	scrollbar-3dlight-color: #000000;
@@ -52,4 +52,4 @@ div.Leonie_Dir_ScrollBar {
 }
 iframe {
 	border: 0px solid black;
-}									
+}
