--- a/Workspace/WebContent/css/pageextjs/editorjava/styles_ace_editor.css
+++ b/Workspace/WebContent/css/pageextjs/editorjava/styles_ace_editor.css
@@ -2,3 +2,13 @@
     border-radius: 20px 0px 0px 20px; 
     box-shadow: 0px 0px 1px 1px red inset; 
 }
+
+.btn_debug_start {
+background-color: rgb(128, 204, 255);
+background-image: none;
+}
+
+.btn_debug_stop {
+background-color: rgb(255, 100, 100);
+background-image: none;
+}
