Upd Editor Java Add South Console Panel Part 1

--- a/Workspace/WebContent/css/pageextjs/editorjava/styles_ace_editor.css
+++ b/Workspace/WebContent/css/pageextjs/editorjava/styles_ace_editor.css
@@ -12,3 +12,9 @@ background-image: none;
 background-color: rgb(255, 100, 100);
 background-image: none;
 }
+
+.console {
+    background-color:black;
+    color:white;
+    background-image: none;
+}
